--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/2351/2351891.png" />
-    
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.22/dist/full.min.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdur Rahman's Protfolio</title>
   </head>
-  <body class="bg-[#0A2647] px-8 text-white font-serif">
+  <body class="bg-[#0A2647] h-auto overflow-x-auto  px-5 py-1 text-white font-serif">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
