work page and other add

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdur Rahman's Protfolio</title>
   </head>
-  <body class="bg-[#0A2647] h-auto overflow-x-auto  px-5 py-1 text-white font-serif">
+  <body class="bg-[#0A2647]  overflow-x-auto p-[0.3px]  px-3  text-white font-serif">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
